--- a/HelloMVC/HelloWebApp/Views/Home/Index.cshtml
+++ b/HelloMVC/HelloWebApp/Views/Home/Index.cshtml
@@ -8,4 +8,8 @@
 <body>
 <h1>Hello</h1>
 <p>Hello,this is p tag.</p>
+<a href="/example/fullname">Who am I?</a>
+<a href="/example/sum">go to sum</a>
+<a href="/home/index">Home</a>
+<a href="/register/entry">entry form</a>
 </body>
