crud for position

--- a/CloudHRMS/CloudHRMS/Views/Position/Entry.cshtml
+++ b/CloudHRMS/CloudHRMS/Views/Position/Entry.cshtml
@@ -34,4 +34,5 @@
         <input type="number" class="form-control" name="Level" required value="1">
     </div>
     <button type="submit" class="btn btn-primary">Entry</button>
+    <a href="/position/list" class="btn btn-outline-primary">List</a>
 </form>
