--- a/CloudHRMS/CloudHRMS/Views/Shared/_Layout.cshtml
+++ b/CloudHRMS/CloudHRMS/Views/Shared/_Layout.cshtml
@@ -22,9 +22,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Position" asp-action="Entry">Position Entry</a>
-                        </li>
+
+                        <li class="nav-item dropdown text-dark">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Position
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li> <a class="dropdown-item" asp-area="" asp-controller="Position" asp-action="Entry">Entry</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Position" asp-action="List">List</a></li>
+                            </ul>
+                        </li>       
+                        
                     </ul>
                 </div>
             </div>
