--- a/CloudHRMS/CloudHRMS/Views/Shared/_Layout.cshtml
+++ b/CloudHRMS/CloudHRMS/Views/Shared/_Layout.cshtml
@@ -31,8 +31,25 @@
                                 <li> <a class="dropdown-item" asp-area="" asp-controller="Position" asp-action="Entry">Entry</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Position" asp-action="List">List</a></li>
                             </ul>
-                        </li>       
-                        
+                        </li>
+                        <li class="nav-item dropdown text-dark">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Department
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li> <a class="dropdown-item" asp-area="" asp-controller="Department" asp-action="Entry">Entry</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Department" asp-action="List">List</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown text-dark">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Employee
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li> <a class="dropdown-item" asp-area="" asp-controller="Employee" asp-action="Entry">Entry</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Employee" asp-action="List">List</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
