--- a/CloudHRMS/CloudHRMS/Views/Employee/Entry.cshtml
+++ b/CloudHRMS/CloudHRMS/Views/Employee/Entry.cshtml
@@ -23,15 +23,15 @@
 <form action="/employee/entry" method="post">
     <div class="mb-3">
         <label class="form-label">Code:</label>
-        <input type="text" class="form-control" name="Code" required>
+        <input type="text" class="form-control" name="Code" required placeholder="type code">
     </div>
     <div class="mb-3">
         <label class="form-label">Name:</label>
-        <input type="text" class="form-control" name="Name" required>
+        <input type="text" class="form-control" name="Name" required placeholder="type name">
     </div>
     <div class="mb-3">
         <label class="form-label">Email</label>
-        <input type="email" class="form-control" name="Email" required >
+        <input type="email" class="form-control" name="Email" required placeholder="type email">
     </div>
     <div class="mb-3">
         <label class="form-label">Gender</label><br />
@@ -72,11 +72,15 @@
     </div>
     <div class="mb-3">
         <label class="form-label">Phone</label>
-        <input type="tel" class="form-control" name="Phone" required>
+        <input type="tel" class="form-control" name="Phone" required placeholder="type phone">
     </div>
     <div class="mb-3">
         <label class="form-label">Basic Salary</label>
-        <input type="number" class="form-control" name="BasicSalary" required>
+        <input type="number" class="form-control" name="BasicSalary" required placeholder="type basic salary">
+    </div>
+    <div class="mb-3">
+        <label class="form-label">Address</label>
+        <textarea class="form-control" placeholder="type address.." name="Address"></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Entry</button>
     <a href="/employee/list" class="btn btn-outline-primary">List</a>
