--- a/CloudHRMS/CloudHRMS/Views/Position/Entry.cshtml
+++ b/CloudHRMS/CloudHRMS/Views/Position/Entry.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model PositionViewModel
+@{
     ViewData["Title"] = "Position";
 }
 <h3>Positon Entry</h3>
@@ -23,15 +24,15 @@
 <form action="/position/entry" method="post">
     <div class="mb-3">
         <label class="form-label">Code:</label>
-        <input type="text" class="form-control" name="Code" required>
+        <input type="text" class="form-control" name="Code" required value="@Model.Code">
     </div>
     <div class="mb-3">
         <label  class="form-label">Name:</label>
-        <input type="text" class="form-control" name="Name" required>
+        <input type="text" class="form-control" name="Name" required value="@Model.Name">
     </div>
     <div class="mb-3">
         <label class="form-label">Level</label>
-        <input type="number" class="form-control" name="Level" required value="1">
+        <input type="number" class="form-control" name="Level" required value="@Model.Level">
     </div>
     <button type="submit" class="btn btn-primary">Entry</button>
     <a href="/position/list" class="btn btn-outline-primary">List</a>
