--- a/CloudHRMS/CloudHRMS/Views/Shared/_Layout.cshtml
+++ b/CloudHRMS/CloudHRMS/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li> <a class="dropdown-item" asp-area="" asp-controller="Employee" asp-action="Entry">Entry</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Employee" asp-action="List">List</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Employee" asp-action="Index">List</a></li>
                             </ul>
                         </li>
                     </ul>
