--- a/CloudHRMS/CloudHRMS/Views/Position/List.cshtml
+++ b/CloudHRMS/CloudHRMS/Views/Position/List.cshtml
@@ -1,10 +1,23 @@
-﻿@model IList<PositionViewModel>
+﻿@model IEnumerable<PositionViewModel>
 <h3>Position List Information</h3>
 <a href="/position/entry" class="btn btn-outline-primary">Entry</a>
-@if(TempData["info"]!=null){
-<div class="alert alert-success" role="alert">
-    @TempData["info"]
-</div>
+@{
+    var info = TempData["Info"];
+}
+@if (info != null)
+{
+    if (Convert.ToBoolean(TempData["Status"]))
+    {
+        <div class="alert alert-success" role="alert">
+            @info
+        </div>
+    }
+    else
+    {
+        <div class="alert alert-danger" role="alert">
+            @info
+        </div>
+    }
 }
 <table class="table">
     <thead>
@@ -20,7 +33,7 @@
         </tr>
     </thead>
     <tbody>
-        @if (Model.Count > 0)
+        @if (Model.Any())
         {
             @foreach (var item in Model)
             {
