--- a/CloudHRMS/CloudHRMS/Views/Shared/_Layout.cshtml
+++ b/CloudHRMS/CloudHRMS/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                                 <li> <a class="dropdown-item" asp-area="" asp-controller="Position" asp-action="Entry">Entry</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Position" asp-action="List">List</a></li>
                             </ul>
-                        </li>
+                        </li>       
                         <li class="nav-item dropdown text-dark">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Department
@@ -47,7 +47,61 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li> <a class="dropdown-item" asp-area="" asp-controller="Employee" asp-action="Entry">Entry</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Employee" asp-action="Index">List</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Employee" asp-action="List">List</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown text-dark">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Attendance Policy
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li> <a class="dropdown-item" asp-area="" asp-controller="AttendancePolicy" asp-action="Entry">Entry</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AttendancePolicy" asp-action="List">List</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown text-dark">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Shift
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li> <a class="dropdown-item" asp-area="" asp-controller="Shift" asp-action="Entry">Entry</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Shift" asp-action="List">List</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown text-dark">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                ShiftAssign
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li> <a class="dropdown-item" asp-area="" asp-controller="ShiftAssign" asp-action="Entry">Entry</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="ShiftAssign" asp-action="List">List</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown text-dark">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Daily Attendance
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li> <a class="dropdown-item" asp-area="" asp-controller="DailyAttendance" asp-action="Entry">Entry</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="DailyAttendance" asp-action="List">List</a></li>
+                            </ul>
+                        </li>          
+                         <li class="nav-item dropdown text-dark">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Attendance DayEnd
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li> <a class="dropdown-item" asp-area="" asp-controller="AttendanceMaster" asp-action="DayEndProcess">DayEnd Process</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AttendanceMaster" asp-action="List">List</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown text-dark">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Payroll
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li> <a class="dropdown-item" asp-area="" asp-controller="Payroll" asp-action="PayrollProcess">Payroll Process</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Payroll" asp-action="List">List</a></li>
                             </ul>
                         </li>
                     </ul>
