--- a/CloudHRMS/CloudHRMS/Views/Shared/_Layout.cshtml
+++ b/CloudHRMS/CloudHRMS/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                                     Employee
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Employee" asp-action="List">List</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Employee" asp-action="Index">List</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown text-dark">
