--- a/CloudHRMS/CloudHRMS/Views/Shared/_LayoutHR.cshtml
+++ b/CloudHRMS/CloudHRMS/Views/Shared/_LayoutHR.cshtml
@@ -494,9 +494,9 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="/employeereport/EmployeeDetailReport" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
-                                    <p>Level 2</p>
+                                    <p>Employe Detail Report</p>
                                 </a>
                             </li>
                             <li class="nav-item">
