--- a/CloudHRMS/CloudHRMS/Views/Shared/_LayoutHR.cshtml
+++ b/CloudHRMS/CloudHRMS/Views/Shared/_LayoutHR.cshtml
@@ -160,7 +160,7 @@
 
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        
+
         <!-- Brand Logo -->
         <a href="/home/index" class="brand-link">
             <img src="~/dist/img/AdminLTELogo.png" alt="CloudHRMS Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
@@ -169,7 +169,7 @@
 
         <!-- Sidebar -->
         <div class="sidebar">
-            
+
             <!-- Sidebar user panel (optional) -->
             <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                 <div class="image">
@@ -196,7 +196,7 @@
             <nav class="mt-2">
                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                     <!-- Add icons to the links using the .nav-icon class
-                         with font-awesome or any other icon font library -->              
+                         with font-awesome or any other icon font library -->
                          <li class="nav-item menu-open">
                         <a href="#" class="nav-link active">
                             <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -217,7 +217,7 @@
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>List</p>
                                 </a>
-                            </li>                          
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -243,7 +243,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>               
+                    </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">
                             <i class="nav-icon fas fa-chart-pie"></i>
@@ -335,12 +335,12 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>                
+                    </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">
                             <i class="far fa-calendar-alt nav-icon"></i>
                             <p>
-                              Daily Attendance 
+                              Daily Attendance
                                 <i class="fas fa-angle-left right"></i>
                             </p>
                         </a>
@@ -457,7 +457,7 @@
                         <a href="#" class="nav-link">
                             <i class="nav-icon far fa-envelope"></i>
                             <p>
-                                Send Email 
+                                Send Email
                                 <i class="fas fa-angle-left right"></i>
                             </p>
                         </a>
@@ -481,7 +481,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>                            
+                    </li>
                     <li class="nav-header">Reports</li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">
@@ -501,7 +501,7 @@
                             <li class="nav-item">
                                 <a href="/employeereport/EmployeeDetailReport" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
-                                    <p>Employe Detail Report</p>
+                                    <p>Employee Detail Report</p>
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -541,12 +541,6 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">
-                            <i class="fas fa-circle nav-icon"></i>
-                            <p>Level 1</p>
-                        </a>
-                    </li>
                 </ul>
             </nav>
             <!-- /.sidebar-menu -->
@@ -574,7 +568,6 @@
         </div>
     </footer>
     <!-- ./wrapper -->
-    
     <!-- REQUIRED SCRIPTS -->
     <!-- Bootstrap -->
     <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
