--- a/CloudHRMS/CloudHRMS/Views/Home/Index.cshtml
+++ b/CloudHRMS/CloudHRMS/Views/Home/Index.cshtml
@@ -157,27 +157,20 @@
                     <div class="card">
                         <div class="card-header border-0">
                             <div class="d-flex justify-content-between">
-                                <h3 class="card-title">Sales</h3>
+                                <h3 class="card-title">Monthly Attendance</h3>
                                 <a href="javascript:void(0);">View Report</a>
                             </div>
                         </div>
                         <div class="card-body">
                             <div class="d-flex">
                                 <p class="d-flex flex-column">
-                                    <span class="text-bold text-lg">$18,230.00</span>
-                                    <span>Sales Over Time</span>
-                                </p>
-                                <p class="ml-auto d-flex flex-column text-right">
-                                    <span class="text-success">
-                                        <i class="fas fa-arrow-up"></i> 33.1%
-                                    </span>
-                                    <span class="text-muted">Since last month</span>
+                                    <span id="totalMonthlyAttendance"></span>
                                 </p>
                             </div>
                             <!-- /.d-flex -->
 
                             <div class="position-relative mb-4">
-                                <canvas id="sales-chart" height="200"></canvas>
+                                <canvas id="attendanceMonthly-chart" height="200"></canvas>
                             </div>
 
                             <div class="d-flex flex-row justify-content-end">
